--- a/package.json
+++ b/package.json
@@ -8,12 +8,17 @@
     "devDependencies": {
         "axios": "^1.1.2",
         "cz-conventional-changelog": "^3.3.0",
-        "laravel-vite-plugin": "^0.7.5",
-        "vite": "^4.0.0"
+        "laravel-vite-plugin": "^0.7.8",
+        "sass": "^1.63.6",
+        "vite": "^4.4.4"
     },
     "config": {
         "commitizen": {
             "path": "./node_modules/cz-conventional-changelog"
         }
+    },
+    "dependencies": {
+        "@popperjs/core": "^2.11.8",
+        "bootstrap": "^5.3.0"
     }
 }
