--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     },
     "dependencies": {
         "@popperjs/core": "^2.11.8",
-        "bootstrap": "^5.3.0"
+        "bootstrap": "^5.3.0",
+        "vercel": "^31.0.4"
     }
 }
