--- a/package.json
+++ b/package.json
@@ -6,10 +6,17 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@alpinejs/focus": "^3.10.5",
+        "@tailwindcss/forms": "^0.5.2",
+        "@tailwindcss/typography": "^0.5.0",
+        "alpinejs": "^3.0.6",
+        "autoprefixer": "^10.4.7",
         "axios": "^1.1.2",
         "cz-conventional-changelog": "^3.3.0",
         "laravel-vite-plugin": "^0.7.8",
+        "postcss": "^8.4.14",
         "sass": "^1.63.6",
+        "tailwindcss": "^3.1.0",
         "vite": "^4.4.4"
     },
     "config": {
